DRILL-8034: Add support for java 17 (#2377)
* DRILL-8034: Add support for java 17

* DRILL-8034: Rename profile